Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-16468

QHostInfoCache should use QElapsedTimer instead of QTime

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.7.4
    • 4.7.1
    • Network
    • None
    • bbf604d11d707f10337cab5b955388e95c180805, 7471178137e6fcc193ba55acdfb2bbeed33f8e7a

    Description

      QHostInfoCache is using QTime to check cache item age.

      QTime is really slow as it checks the timezone every time. QElapsedTimer is
      much faster (up to 14x) in doing the same thing. Please change to use
      QElapsedTimer.

      Fix proposal as an attachement.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mgoetz Markus Goetz (Inactive)
            jupakari Juuso Pakarinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes