Change QHostInfoCache to use QElapsedTime instead of QTime.

Use QElapsedTime instead of QTime for performance gain. See QT-2965 for
more info.

Task-number: QTBUG-16468
Reviewed-by: Markus Goetz